edits to active-mdx introduction

--- a/data/blog/activemdx-introduction.mdx
+++ b/data/blog/activemdx-introduction.mdx
@@ -185,7 +185,7 @@ This is a website for a hypothetical software project. The goal of this website 
 - stakeholders can get a real time overview of where the project is at. How much it will cost, how much time it will take.
 - the builders of the software have up to date, accurate information about the requirements for the software
 
-Software development teams (loosely) follow the agile software development methodology, which assumes that a vision for a software project can be broken down into small, trackable units of work called Stories.
+Software development teams (loosely) follow the agile software development methodology, which assumes that a vision for a software project can be broken down into small, trackable units of work called Stories. Stories are things that can be estimated, prioritized, scheduled, started, stopped, and hopefully eventually completed.
 
 A Story describes some feature of the software, usually expressed in the form:
 
