--- a/data/blog/activemdx-introduction.mdx
+++ b/data/blog/activemdx-introduction.mdx
@@ -40,7 +40,11 @@ Fast forward to 2022, and the Markdown landscape is insanely better than it was 
 
 As a heavy user of this, I wanted to revive the ideas behind the Brief project but instead in JavaScript.
 
-So I created [ActiveMDX](https://www.github.com/soederpop/active-mdx)
+So I created [ActiveMDX](https://www.github.com/soederpop/active-mdx).
+
+Like Brief, ActiveMDX can help automate huge chunks of communication work that go into building software with a team.
+
+It can even be used to generate code! Imagine what something like Github Co-Pilot or OpenAI Codex can do with very a structured set of instructions? I would not be surprised if people are able to go from english to deployed product in the next couple of years.
 
 ## Turning Structured Writing Into Data
 
