--- a/data/blog/activemdx-introduction.mdx
+++ b/data/blog/activemdx-introduction.mdx
@@ -264,7 +264,11 @@ All of this documentation lives right along side the code, and is accessible dir
 
 This helps them build the thing faster than ever. They spend less time in meetings, because anyone who wants a view into the status of things only has to go to the website and it is up to date!
 
-The quality of their work is way higher than normal, because all of the acceptance criteria in the stories were extracted out by a tool and used to generate end to end tests.
+The quality of their work is way higher than normal, because all of the acceptance criteria in the stories were extracted out by a tool and used to generate end to end tests. These end to end tests record videos and screen grabs.
+
+When a new version is released, the customer can go to a website and see the changelog that is automatically generated, watch videos of the software working.
+
+Do you understand how much manual effort and technology setup would be required to do this for every project? Without something like ActiveMDX, this would be more work in addition to all of the time spent in Jira and meetings.
 
 The possibilities really are endless.
 
