--- a/data/blog/claudiajs.mdx
+++ b/data/blog/claudiajs.mdx
@@ -97,13 +97,11 @@ $ claudia-local-api --api-module app.js
 
 If you open your browser to [http://localhost:3000](http://localhost:3000) you should see your application running.
 
-`localhost` is the name of your own computer on the network. `:3000` is the port that the application is lsitening on.
+`localhost` is the name of your own computer on the network. `:3000` is the port that the application is listening on.
 
 Nobody but you can access the application that is running this way.
 
 If you want to publish the application to the world, you need to deploy it to AWS.
-
-If you want, you can skip this step if you already get the idea!
 
 ## Publishing your program to AWS
 
