add cleanup section

--- a/data/blog/claudiajs.mdx
+++ b/data/blog/claudiajs.mdx
@@ -231,3 +231,15 @@ A real server would be more advanced, and do more complicated things. A lot of t
 By following this tutorial, you were able to write code, change code, send it to AWS, and share a URL with somebody who wants to use that code. You did it using tools that professional software developers use every day and make great money with.
 
 That's a big accomplishment! You have a lot more to learn, but that is a sample of what real players do every day.
+
+## Cleanup
+
+You should destroy the application you just deployed when you're done, if you don't want to worry about getting charged money.
+
+To do that:
+
+```shell
+$ claudia destroy
+```
+
+If you're done using AWS for now, you can also delete the access keys you created when you started. This way nobody can get ahold of them and use your account.
