add posters to videos

--- a/data/blog/activemdx-introduction.mdx
+++ b/data/blog/activemdx-introduction.mdx
@@ -234,7 +234,11 @@ This will in turn create separate story documents.
 At that point you can publish all of those stories to a Google spreadsheet and have people prioritize them and provide estimates on how long they will take.
 
 <video width="100%" controls>
-  <source src="/static/videos/sheets-plugin-example.mp4" type="video/mp4" />
+  <source
+    src="/static/videos/sheets-plugin-example.mp4"
+    poster="/static/videos/sheets-plugin-example.jpg"
+    type="video/mp4"
+  />
 </video>
 
 You can then pull that information back into your documents, and version control it.
@@ -256,7 +260,7 @@ They version control their work like developers do. Github Actions workflows pro
 
 For example, you publish all of those stories to Github Issues.
 
-<video width="100%" controls>
+<video width="100%" controls poster="/static/videos/github-sync-example.jpg">
   <source src="/static/videos/github-sync-example.mp4" type="video/mp4" />
 </video>
 
